--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@tabler/icons-react": "^3.2.0",
+    "apexcharts": "^3.49.0",
+    "material-ui-popup-state": "^5.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.1.1",
