--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@tabler/icons-react": "^3.2.0",
     "apexcharts": "^3.49.0",
+    "axios": "^1.6.8",
     "material-ui-popup-state": "^5.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1"
   },
   "devDependencies": {
