--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@tabler/icons-react": "^3.2.0",
     "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
+    "jspdf": "^2.5.2",
     "material-ui-popup-state": "^5.1.0",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
